cluster-hardening/01-network-policies/policies/00_deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {} # Empty brackets matches ALL pods in the namespace
  policyTypes:
  - Ingress
  - Egress
