cluster-hardening/01-network-policies/policies/02-vote-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vote-frontend-to-redis
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: vote-frontend
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
